@@ -78,7 +78,8 @@ PARAMETER_VARIATIONS = []
 NUM_ITERATIONS = 4
 
 #number of classes of bots to run
-NUM_CLASSES = 300
+NUM_CLASSES = 100
+
 
 #number of minutes in a day
 minInDay = 1440
@@ -114,6 +115,12 @@ mode = modes['SoloTrainer']['value']
 
 #a dictionary with attributes passed back from an evaluator
 attributeDict = {}
+
+#dictionary of the changed parameters with each rewrite of the parameters file
+changed = {}
+
+#the return each run of the crypto currency got
+returns = []
 
 #makes a log file for this instance of the trainer that is sorted into a folder by the date it was run
 # and its name is just its timestamp
@@ -174,15 +181,16 @@ def keyCheck(key):
 #TODO remember after to testing not to randomize stuff like cumulative percent change store (i.e data)
 def randomizeParams(paramDict, typeOfRandom):
     #default range size and stepSize
-    range = 1.0
-    randVal = 0.0
+    range = 10.0
+
     if(typeOfRandom == 3):
         return 0
     if (typeOfRandom == 0):
 
         for key, value in paramDict.items():
-
-            if(keyCheck(key) != 1):
+            randcheck = int(random.uniform(0, 1)* 10)
+            #file2.write("THE RAND " + str(randcheck) + '\n')
+            if(keyCheck(key) != 1 and randcheck > 5 ):
                 randVal = paramDict[key]
                 randVal += random.uniform(-1,1) * range
                 paramDict[key] = randVal
@@ -190,12 +198,14 @@ def randomizeParams(paramDict, typeOfRandom):
 
     #todo add a normal kind of randomization
     if(typeOfRandom == 1):
-        range = 100.0
+        range = 25.0
 
         for key, value in paramDict.items():
-            if(keyCheck(key) != 1):
+            randcheck = int(random.uniform(0, 1) * 50)
+            #file2.write("THE RAND here " + str(randcheck) + '\n')
+            if(keyCheck(key) != 1 and randcheck > 10):
                 randVal = paramDict[key]
-                randVal += random.uniform(-1,1) * range
+                randVal += random.uniform(-1, 1) * range
                 paramDict[key] = randVal
 
     #todo add a special kind of randomization
@@ -230,15 +240,15 @@ def reWriteParameters(paramDict):
     line = 0
 
     lenParam = len(paramDict)
-    file2.write("PARAMETER DICTIONARY " + str(paramDict))
-    file2.write("LENGTH OF PARAMETER DICT " + str(lenParam))
+    #file2.write("PARAMETER DICTIONARY " + str(paramDict) + '\n')
+    #file2.write("LENGTH OF PARAMETER DICT " + str(lenParam)  + '\n')
     count = 1
     for key, value in paramDict.items():
         if count == lenParam:
             lastParam = key
         count+=1
 
-    file2.write("LAST PARAM " + str(lastParam))
+    #file2.write("LAST PARAM " + str(lastParam)  + '\n')
 
     for key, value in paramDict.items():
         #if we are at the very last parameter do not print a new line
@@ -246,18 +256,14 @@ def reWriteParameters(paramDict):
             foundLast = 1
             #print('\'%s\': %s,' % (key, value))
             file.write('\'%s\': %s,' % (key, value))
-            file2.write('HEY LOOK AT THIS \'%s\': %s,' % (key, value))
+            #file2.write('HEY LOOK AT THIS \'%s\': %s,' % (key, value) + '\n')
 
         if key != lastParam and foundLast == 0:
             #print('\'%s\': %s,\n' % (key, value))
             file.write('\'%s\': %s,\n' % (key, value))
-            file2.write('HEY LOOK HERE \'%s\': %s,' % (key, value))
+            #file2.write('HEY LOOK HERE \'%s\': %s,' % (key, value) + '\n')
 
 
-    file.seek(0)
-    for i in file:
-        #print('LINE '+ str(line) + ' : ' + str(i))
-        line += 1
 
 #converts the given string to a Dict. Used to parse the returned string from the bots being trained
 def stringToDict(stringToChange):
@@ -324,11 +330,18 @@ def reformatLine(line, attDict):
    attributes = firstFormat.split('DONEEND')[1]
    num = attributes.split('ABSTAIN')[1]
    realnum = attributes.split('ENDABSTAIN')[0]
-   print(str(attributes))
+   #print(str(attributes))
    attDict.update({'NumAbstain': realnum})
 
    return reformat
 
+#function to print to file the parameter file line by line for bug checking
+def checkFileofParams():
+    file.seek(0)
+    line = 0
+    for i in file:
+        file2.write('LINE '+ str(line) + ' : ' + str(i) + '\n')
+        line += 1
 
 def main():
     global NUM_ITERATIONS
@@ -340,6 +353,9 @@ def main():
     global runTime
     global mode
     global running
+
+    #keeps track of how many times the parameters are changed
+    newParamCount = 0
 
     runTime = int(time.time() * 1000)
     buildLogs()
@@ -363,6 +379,7 @@ def main():
         if i > 0:
             paramCompletePath = os.path.join(paramPaths, "TEST_PARAMETERS.txt")
             file = open(paramCompletePath, "r+")
+            file.seek(0)
 
         #creates NUM_ITERATIONS amounts of bots
         for j in range(NUM_ITERATIONS):
@@ -391,6 +408,7 @@ def main():
 
             #passing the parameters to the processes
             out = proc.communicate(input = str(PARAMETERS) + ' RunTime ' + str(runTime) + ' Mode ' + str(running))
+            proc.wait()
             timestamp = int(time.time() * 1000)
             print(str(timestamp))
             print("CLASS NUM " + str(PARAMETERS['CLASS_NUM']) + " VARIATION NUMBER " + str(PARAMETERS['VARIATION_NUMBER']))
@@ -417,15 +435,18 @@ def main():
 
                 print("THIS" + str(cumulativePerentChangeStore))
                 cumulativePerentChangeStore = float(cumulativePerentChangeStore)
-
+                returns.append(cumulativePerentChangeStore)
                 #print(str(cumulativePerentChangeStore))
 
                 #if the cumulative Percent Stored is greater than the current Max store it and the line of parsed input that it was from
                 if (cumulativePerentChangeStore >= current_Max and 20 > (PARAMETERS['MAX_CYCLES'])/2) or count == 0 :
                     current_Max = cumulativePerentChangeStore
                     stored_output = reform
+                    newParamCount += 1
                 count += 1
             #reset the parameters dictionary to the original "best" one from the file
+            file2.write('Class ' + str(i) + ' variation ' + str(variationNum) + '\n')
+            checkFileofParams()
             resetParameters(PARAMETERS)
             variationNum += 1
         #convert the stored, parsed string into a dictionary
@@ -442,6 +463,14 @@ def main():
             z.wait()
 
         file.close()
+
+    #information about all the classes and such
+    file2.write('Number of changes of parameters ' + str(newParamCount))
+    for cla in NUM_CLASSES:
+        for var in NUM_ITERATIONS:
+            file2.write("Class " + str(cla) + " Variation " + str(var) + ' Return ' + str(returns[cla * var + var]) + '\n')
+
+    file2.close()
 
 
 if __name__ == "__main__":
